<resources>
    <string name="app_name">Newsify</string>
    <string name="Newsify">Newsify</string>
    <string name="home">Home</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="publishedAt">publishedAt</string>
    <string name="sample_text">sample text</string>
    <string name="content">Content</string>
    <string name="heading">Heading</string>
</resources>